--- a/ClockFx/src/application/Clock.fxml
+++ b/ClockFx/src/application/Clock.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -8,81 +9,93 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ClockController">
-   <children>
-      <BorderPane prefHeight="120.0" prefWidth="480.0">
-         <center>
-            <HBox prefHeight="107.0" prefWidth="202.0" BorderPane.alignment="TOP_LEFT">
-               <children>
-                  <TextField fx:id="tfHours" alignment="CENTER" editable="false" prefHeight="80.0" prefWidth="120.0" text="00">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" right="5.0" top="20.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <TextField fx:id="tfMinutes" alignment="CENTER" editable="false" prefHeight="80.0" prefWidth="120.0" text="00">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" right="5.0" top="20.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <TextField fx:id="tfSeconds" alignment="CENTER" prefHeight="80.0" prefWidth="120.0" text="00">
-                     <HBox.margin>
-                        <Insets left="10.0" right="5.0" top="20.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </TextField>
-               </children>
-               <BorderPane.margin>
-                  <Insets right="10.0" />
-               </BorderPane.margin>
-            </HBox>
-         </center>
-         <left>
-            <VBox prefWidth="150.0">
-               <children>
-                  <Button fx:id="bStartStop" alignment="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="120.0" rotate="-0.0" text="Start" BorderPane.alignment="TOP_LEFT">
-                     <BorderPane.margin>
-                        <Insets right="10.0" />
-                     </BorderPane.margin>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Button fx:id="bSave" disable="true" mnemonicParsing="false" prefWidth="120.0" rotate="-0.0" text="Save">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
-               </children>
-            </VBox>
-         </left>
-      </BorderPane>
-      <Accordion>
-        <panes>
-          <TitledPane fx:id="tpRecords" text="Records">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <TableView fx:id="tvWorkingDay" prefHeight="180.0" prefWidth="478.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy></TableView>
-                     </children>
-                  </AnchorPane>
-            </content>
-          </TitledPane>
-          <TitledPane animated="false" text="Statitics">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </TitledPane>
-        </panes>
-      </Accordion>
-   </children>
+	<children>
+		<BorderPane prefHeight="90.0" prefWidth="480.0">
+			<center>
+				<HBox prefHeight="107.0" prefWidth="202.0" BorderPane.alignment="TOP_LEFT">
+					<children>
+						<TextField fx:id="tfHours" alignment="CENTER" editable="false" prefHeight="80.0" prefWidth="120.0" text="00">
+							<font>
+								<Font size="35.0" />
+							</font>
+							<HBox.margin>
+								<Insets left="10.0" right="5.0" top="20.0" />
+							</HBox.margin>
+						</TextField>
+						<TextField fx:id="tfMinutes" alignment="CENTER" editable="false" prefHeight="80.0" prefWidth="120.0" text="00">
+							<font>
+								<Font size="35.0" />
+							</font>
+							<HBox.margin>
+								<Insets left="10.0" right="5.0" top="20.0" />
+							</HBox.margin>
+						</TextField>
+						<TextField fx:id="tfSeconds" alignment="CENTER" prefHeight="80.0" prefWidth="120.0" text="00">
+							<HBox.margin>
+								<Insets left="10.0" right="5.0" top="20.0" />
+							</HBox.margin>
+							<font>
+								<Font size="35.0" />
+							</font>
+						</TextField>
+					</children>
+					<BorderPane.margin>
+						<Insets right="10.0" />
+					</BorderPane.margin>
+				</HBox>
+			</center>
+			<left>
+				<VBox prefWidth="150.0">
+					<children>
+						<Button fx:id="bStartStop" alignment="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="120.0" rotate="-0.0" text="Start" BorderPane.alignment="TOP_LEFT">
+							<BorderPane.margin>
+								<Insets right="10.0" />
+							</BorderPane.margin>
+							<VBox.margin>
+								<Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
+							</VBox.margin>
+						</Button>
+						<Button fx:id="bSave" disable="true" mnemonicParsing="false" prefWidth="120.0" rotate="-0.0" text="Save">
+							<VBox.margin>
+								<Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
+							</VBox.margin>
+						</Button>
+					</children>
+				</VBox>
+			</left>
+		</BorderPane>
+		<Accordion fx:id="accordion" prefWidth="480.0">
+			<panes>
+				<TitledPane fx:id="tpRecords" text="Records">
+					<content>
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="480.0">
+							<children>
+								<TableView fx:id="tvWorkingDay" fixedCellSize="0.0" prefHeight="180.0" prefWidth="480.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-0.0">
+									<columnResizePolicy>
+										<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+									</columnResizePolicy>
+								</TableView>
+							</children>
+						</AnchorPane>
+					</content>
+				</TitledPane>
+				<TitledPane fx:id="tpStatitics" text="Statitics">
+					<content>
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="480.0">
+							<children>
+								<BarChart fx:id="bChart" prefHeight="180.0" prefWidth="480.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<xAxis>
+										<CategoryAxis side="BOTTOM" />
+									</xAxis>
+									<yAxis>
+										<NumberAxis side="LEFT" />
+									</yAxis>
+								</BarChart>
+							</children>
+						</AnchorPane>
+					</content>
+				</TitledPane>
+			</panes>
+		</Accordion>
+	</children>
 </VBox>
